<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".FirstScreen">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/tictactoe"
        android:textColor="#F50057"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="serif" />

    <Button
        android:id="@+id/singleButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:background="#03A9F4"
        android:onClick="easyButtonClicked"
        android:text="@string/easy"
        tools:textColor="#F5F5F5" />

    <Button
        android:id="@+id/singleButtonHard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:background="#03A9F4"
        android:onClick="hardButtonClicked"
        android:text="@string/hard"
        tools:textColor="#F5F5F5" />


</LinearLayout>